--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^5.5.3",
     "next": "12.0.7",
     "normalize.css": "^8.0.1",
     "react": "17.0.2",
