--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "cross-env ANALYZE=true next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^12.0.7",
     "next": "12.0.7",
-    "normalize.css": "^8.0.1",
+    "preact": "^10.6.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7",
-    "sass": "^1.45.0"
+    "cross-env": "^7.0.3",
+    "eslint": "8.5.0",
+    "eslint-config-next": "12.0.7"
   }
 }
