--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
   "dependencies": {
     "@next/bundle-analyzer": "^12.0.7",
     "next": "12.0.7",
+    "normalize.css": "^8.0.1",
     "preact": "^10.6.4",
     "react": "17.0.2",
+    "react-alice-carousel": "^2.5.1",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.0",
     "cross-env": "^7.0.3",
     "eslint": "8.5.0",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.5",
+    "sass": "^1.45.1",
+    "tailwindcss": "^3.0.7"
   }
 }
