--- a/package.json
+++ b/package.json
@@ -3,20 +3,26 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^5.5.3",
+    "framer-motion": "^5.5.5",
     "next": "12.0.7",
-    "normalize.css": "^8.0.1",
+    "next-seo": "^4.28.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "eslint": "8.4.1",
+    "@types/node": "17.0.3",
+    "@types/react": "17.0.37",
+    "autoprefixer": "^10.4.0",
+    "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
-    "sass": "^1.45.0"
+    "postcss": "^8.4.5",
+    "sass": "^1.45.1",
+    "tailwindcss": "^3.0.7",
+    "typescript": "4.5.4"
   }
 }
