--- a/package.json
+++ b/package.json
@@ -3,29 +3,35 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "cross-env ANALYZE=true next build",
-    "build:static": "cross-env ANALYZE=true next build && next export",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/bundle-analyzer": "^12.0.7",
     "framer-motion": "^5.5.5",
     "next": "12.0.7",
+    "next-i18next": "^10.0.1",
     "next-seo": "^4.28.1",
     "normalize.css": "^8.0.1",
     "preact": "^10.6.4",
     "react": "17.0.2",
-    "react-alice-carousel": "^2.5.1",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@types/node": "17.0.3",
     "@types/react": "17.0.37",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
     "autoprefixer": "^10.4.0",
     "cross-env": "^7.0.3",
-    "eslint": "8.5.0",
+    "eslint": "^7.32.0",
     "eslint-config-next": "12.0.7",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
+    "eslint-plugin-react": "^7.28.0",
     "postcss": "^8.4.5",
     "sass": "^1.45.1",
     "tailwindcss": "^3.0.7",
