--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
         "es2021": true
     },
     "extends": [
+        "plugin:@next/next/recommended",
         "plugin:react/recommended",
         "standard"
     ],
