--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.0.7",
     "@types/node": "17.0.3",
     "@types/react": "17.0.37",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
