--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "preact": "^10.6.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-photo-gallery": "^8.0.0"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.7",
@@ -35,6 +36,7 @@
     "eslint-plugin-react": "^7.28.0",
     "postcss": "^8.4.5",
     "sass": "^1.45.1",
+    "sharp": "^0.29.3",
     "tailwindcss": "^3.0.7",
     "typescript": "4.5.4"
   }
